# flutter_resizer_image

./: .gitignore  CHANGELOG.md  Makefile  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
commons/resizer/: Makefile  README.md  pubspec.yaml
commons/resizer/lib/: resizer.dart
commons/resizer/rust/: Cargo.toml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/ios/: Podfile
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: flutter_resizer_image.podspec
ios/Classes/: FlutterResizerImagePlugin.swift  libresizer.h  resizer_image.h
lib/: flutter_resizer_image.d.dart  flutter_resizer_image.dart  flutter_resizer_image.g.dart  flutter_resizer_image_method_channel.dart  flutter_resizer_image_platform_interface.dart  resizer_image.d.dart  resizer_image.g.dart
lib/binding/: flutter_resizer_image_binding.dart
resizer/: Cargo.toml  Makefile
resizer/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
rust/: Cargo.toml  Makefile  cbindgen.toml
rust/header/: resizer_image.h
rust/src/: lib.rs
rust/src/api/: mod.rs  resizer.rs
rust_builder/: CHANGELOG.md  LICENSE  pubspec.yaml
rust_builder/android/: build.gradle
rust_builder/linux/: CMakeLists.txt
rust_builder/windows/: CMakeLists.txt
test/: flutter_resizer_image_method_channel_test.dart  flutter_resizer_image_test.dart
(+35 files in other folders)
