[package]
name = "resizer_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "resizer_image"
crate-type = ["staticlib","cdylib"]


[dependencies]
base64 = "0.21.0"
image = "0.24.6"
libc = "0.2.87"
safer-ffi = { version = "*", features = ["proc_macros"] }

[features]
c-headers = ["safer-ffi/headers"]
